samples/_failures_safe/1760887666_ee01d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d920212.c: In function ‘main’:
./samples/SAFE/__tmp_5d920212.c:137:9: error: expected expression at end of input
  137 |         double ratio = (double)compressed.size /
      |         ^~~~~~
./samples/SAFE/__tmp_5d920212.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d920212.c:137:9: error: expected declaration or statement at end of input
